Added the unit and the occurrence fields

--- a/src/main/resources/static/Task.css
+++ b/src/main/resources/static/Task.css
@@ -61,6 +61,12 @@ h1{
     font-size: 25px;
   }
 
+  table{
+    border-color:green;
+    border-width: 15px;
+    border-style: solid;
+  }
+
 textarea {
   width: 100%;
   height: 150px;
