--- a/src/main/resources/templates/task/index.html
+++ b/src/main/resources/templates/task/index.html
@@ -7,27 +7,10 @@
 </head>
 <body>
 <h1 th:text="${title}"></h1>
-<theader></theader>
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Date</th>
-        <th>Interval</th>
-        <th>Unit</th>
-    </tr>
-    <button>
-    <tr th:each="task : ${tasks}">
-        <td th:text="${task.name}"></td>
-        <td th:text="${task.description}"></td>
-        <td th:text="${task.currentTimeStamp}"></td>
-        <td th:text="${task.occurence}"></td>
-        <td th:text="${task.unit}"></td>
-    </tr>
-    </button>
-</table>
+<ul th:each="task : ${tasks}" >
+    <a href="#"><li th:text="${task.name}"></li></a>
 
-<button></button>
+</ul>
 
 
 
