--- a/src/main/resources/templates/task/login.html
+++ b/src/main/resources/templates/task/login.html
@@ -2,14 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <title th:text="${title}">Title</title>
+
 </head>
 <body>
+    <h1>This is my user login page</h1>
     <form method="POST" th:object="${user}">
         <label th:for="username">User Name: </label>
         <input type="text" th:field="*{username}"/>
         <label th:for="password">Password: </label>
         <input type="password" th:field="*{password}"/>
+        <input type="submit"/>
     </form>
 </body>
 </html>
