--- a/src/main/resources/templates/task/view.html
+++ b/src/main/resources/templates/task/view.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8"/>
     <title>Title</title>
 </head>
-<body>
-    <h1 th:text="${task.name}"></h1>
-    <p th:text="${task.description}"></p>
+<body >
+
+    <h1>Hello here are your tasks: </h1>
+    <h1  th:text="${task.name} "></h1>
+    <p  th:text="${task.description}"></p>
+
 
 
 
