--- a/src/main/resources/static/Task.css
+++ b/src/main/resources/static/Task.css
@@ -67,7 +67,7 @@ h1{
     border-style: solid;
   }
 
-textarea {
+textarea{
   width: 100%;
   height: 150px;
   padding: 12px 20px;
@@ -81,5 +81,24 @@ textarea {
 form{
     border: 2px;
     text-align: center;
+
+}
+
+.name:hover{
+    border-size:1px;
+    border-style:solid;
+    border-color:blue;
+}
+
+.description:hover{
+    border-size:1px;
+    border-style:solid;
+    border-color:blue;
+}
+
+.view:hover{
+    border-size:1px;
+    border-style:solid;
+    border-color:blue;
 
 }
